objects/FoodOrderDetail__c.object
<CustomObject>
    <description>Child object holding the items related to an order.</description>
    <fields>
        <fullName>FoodOrderId__c</fullName>
        <description>Order Id</description>
        <label>FoodOrder</label>
        <referenceTo>FoodOrder__c</referenceTo>
        <relationshipLabel>FoodOrderDetails</relationshipLabel>
        <relationshipName>FoodOrderDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MealItemId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Meal Item</label>
        <referenceTo>MealItem__c</referenceTo>
        <relationshipLabel>FoodOrderDetails</relationshipLabel>
        <relationshipName>FoodOrderDetails</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity each item.</description>
        <label>Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Total cost of Items (Qty x Unit Price)</description>
        <formula>if( ! ISBLANK(UnitPrice__c), 
    Quantity__c * UnitPrice__c,
    0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <description>Price of one unit from MealItem object. Can be editable.</description>
        <label>UnitPrice</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>FoodOrderDetail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FoodOrderId__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FoodOrderDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FoodOrderDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>